--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
 <%= @user.email %>
+<br />
+<%= link_to "logout", destroy_user_session_path, method: "delete" %>
